<resources>
    <string name="app_name">Togenda</string>

    <string name="tab_navigation_agenda">Agenda</string>
    <string name="tab_navigation_todo">Todo</string>

    <string name="settings_label">Settings</string>

    <string name="dialog_header_new_task">New task</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_confirm">Confirm</string>

    <string name="task_attribute_title">Title</string>
    <string name="task_attribute_description">Description</string>
    <string name="task_attribute_priority">Priority</string>
    <string name="task_attribute_deadline">Deadline</string>
    <string name="task_attribute_color">Color</string>
</resources>
